set focus to the selected row